# LogRadar

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/logradar-core/: Cargo.toml
crates/logradar-core/benches/: indexing.rs
crates/logradar-core/src/: decompress.rs  encoding.rs  engine.rs  extractor.rs  format.rs  lib.rs  line_index.rs  query.rs  session.rs
crates/logradar-core/tests/: integration.rs
no-frontend/: index.html
src/: App.test.tsx  App.tsx  main.tsx  router.test.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  workspace.rs
src-tauri/tests/: ipc_contract.rs
src/components/: AppShell.css  AppShell.test.tsx  AppShell.tsx  ExtractProgress.tsx  FileTree.css  FileTree.test.tsx  FileTree.tsx  JsonInspector.css  JsonInspector.test.tsx  JsonInspector.tsx  Minimap.css  Minimap.test.tsx  Minimap.tsx  SearchHistory.test.tsx  SearchHistory.tsx  SearchPanel.css  SearchPanel.test.tsx  SearchPanel.tsx  SyntaxHighlighter.css  SyntaxHighlighter.test.tsx  SyntaxHighlighter.tsx  TabStrip.css  TabStrip.test.tsx  TabStrip.tsx  ThemeToggle.tsx  VirtualLogView.css  VirtualLogView.test.tsx  VirtualLogView.tsx
src/hooks/: useSessions.test.ts  useSessions.ts
src/lib/: ipc.test.ts  ipc.ts  recents.test.ts  recents.ts
src/pages/: ExportDialog.css  ExportDialog.test.tsx  ExportDialog.tsx  MainWindow.css  MainWindow.test.tsx  MainWindow.tsx  (+9 more)
(+12 files in other folders)
