[package]
name = "logradar-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
logradar-core = { path = "../crates/logradar-core" }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
